[gd_scene load_steps=5 format=3 uid="uid://dkfqww1gfq0k"]

[ext_resource type="Script" uid="uid://d2ki6rg3gu85i" path="res://middle_area.gd" id="1_fbp2b"]
[ext_resource type="Texture2D" uid="uid://cf85swspxfqhn" path="res://assets/resource_back.png" id="3_b17jf"]
[ext_resource type="Texture2D" uid="uid://y6vorsgamkxj" path="res://assets/character_back.png" id="3_fv5w4"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 32

[node name="MiddleArea" type="Node2D"]
script = ExtResource("1_fbp2b")

[node name="StackResources" type="TextureButton" parent="."]
offset_left = 24.0
offset_top = 256.0
offset_right = 152.0
offset_bottom = 456.0
texture_normal = ExtResource("3_b17jf")
ignore_texture_size = true
stretch_mode = 4

[node name="StackCharacters" type="TextureButton" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1128.0
offset_top = 256.0
offset_right = 1256.0
offset_bottom = 456.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("3_fv5w4")
ignore_texture_size = true
stretch_mode = 5

[node name="NewCardsButton" type="Button" parent="."]
offset_left = 344.0
offset_top = 200.0
offset_right = 496.0
offset_bottom = 240.0
size_flags_horizontal = 4
text = "4 new cards"

[node name="DiscardOverlay" type="Panel" parent="."]
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2

[node name="DiscardLabel" type="Label" parent="DiscardOverlay"]
layout_mode = 1
offset_right = 1280.0
offset_bottom = 288.0
text = "You have too many cards.
Discard them too continue."
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="StackResources" to="." method="_on_stack_resources_pressed"]
[connection signal="pressed" from="StackCharacters" to="." method="_on_stack_characters_pressed"]
[connection signal="pressed" from="NewCardsButton" to="." method="_on_button_pressed"]
